Add optional JVMTI native agent for stack-frame root collection
Closes the legacy parity gap on Tagger.checkpointStackRoots: a
checkpointAll() that walks the heap-reachable graph alone misses
references held only by local variables in active stack frames. With
this commit, attaching libcrochet-jvmti.so via -agentpath enables that
walk; without it, StackRoots.engaged stays false and behaviour is
unchanged from the heap-only baseline.

The native agent (crochet-agent/src/main/native/crochet_jvmti.cpp,
~250 LOC) acquires JVMTI 1.2 with can_access_local_variables and
can_suspend, registers a VMInit callback that flips
StackRoots.engaged via FindClass + GetStaticMethodID +
CallStaticVoidMethod once the bootstrap loader is available, and
exports one JNI native: collectAllStackObjects(boolean). The native
walks every live thread (suspending all but the caller), enumerates
each frame's locals via the LocalVariableTable when present (or
maxLocals scan as fallback), and accumulates every reference-typed
slot value into a Java Object[] returned to the caller.

The caller's own thread is included in the walk (its frames hold the
user's locals), with our own runtime frames filtered out via a
class-signature prefix check (skip frames whose declaring class
starts with "Lnet/jonbell/crochet/"). Skipping the entire calling
thread — the legacy default — would silently drop all roots in the
common single-threaded case.

CheckpointRollbackAgent.checkpointAll() and rollbackAll(int) call
StackRoots.checkpointStackRoots(v, true) / rollbackStackRoots(rv, true)
at the end of their walks. Wrapped in try/catch so a JVMTI failure
doesn't abort the whole checkpoint.

Demo scenario 21-stack-roots constructs a Holder kept alive only via
a local in main(), checkpoints, mutates, rolls back. With JVMTI
attached: rollback restores (SCENARIO OK). Without: rollback can't
restore (the heap walk doesn't see the Holder), and the scenario
emits SCENARIO OK (degraded) so the demo runner accepts both modes.
